# tests

./: README.md  gameoflife_webgpu.html
3d_engine/: CMakeLists.txt  readme.md
3d_engine/src/: main.cpp
bevy_test/: Cargo.toml  readme.md
bevy_test/assets/3d/: basic_scene.glb  player.glb  tree.glb
bevy_test/blender/: basic_scene.blend  player.blend  tree.blend
bevy_test/src/: main.rs
bevy_test/src/components/: player.rs
bevy_test/src/plugins/: basic_scene_plugin.rs  hello_plugin.rs  mod.rs  payer_plugin.rs
bevy_test/src/plugins/basic_scene_plugin/: mod.rs
bevy_test/src/resources/: mod.rs  player_resource.rs
bevy_test/src/systems/: follow_camera.rs  kinematic_gravity.rs  mod.rs  move_with_keyboard.rs
cpp/cpp_first/: README.md  main.cpp
cpp/mini_compiler/: CMakeLists.txt  README.md  test.cm
cpp/mini_compiler/src/: main.cpp
cpp/mini_compiler/src/ast/: ast.h  program_ast.cpp
cpp/mini_compiler/src/ast/expressions/: callexpr_ast.cpp  expr_ast.cpp  expr_ast.h  numberexpr_ast.h  variableexpr_ast.cpp
cpp/mini_compiler/src/ast/statements/: returnstat_ast.h  statement_ast.cpp  statement_ast.h
cpp/mini_compiler/src/ast_visitor/: ast_visitor.cpp  ast_visitor.h  nasm_ast_visitor.cpp  nasm_ast_visitor.h
cpp/mini_compiler/src/lexer/: lexer.cpp  lexer.h
cpp/mini_compiler/src/parser/: parser.cpp  parser.h
cpp/mini_compiler/src/utils/: utils.cpp  utils.h
go_grpc_monorepo_test/: README.md  go.mod  makefile
go_grpc_monorepo_test/lib/grpc/: helloapi.go
go_grpc_monorepo_test/lib/tests/: test.go
go_grpc_monorepo_test/protos/: hello.proto
go_grpc_monorepo_test/services/helloapi/: main.go
mario_kart_clone/: Cargo.toml  readme.md
mario_kart_clone/assets/3d/: basic_scene.glb
mario_kart_clone/blender/: basic_scene.blend
mario_kart_clone/src/: main.rs
mario_kart_clone/src/plugins/: basic_scene_plugin.rs  mod.rs  payer_plugin.rs  physics_plugin.rs
mario_kart_clone/src/systems/: follow_camera.rs  mod.rs  move_with_keyboard.rs
mini_compiler/: CMakeLists.txt  README.md
mini_compiler/src/: main.cpp
mini_compiler/src/ast/: ast.cpp  program_ast.h
mini_compiler/src/ast_visitor/: ast_visitor.h
mini_compiler/src/lexer/: lexer.cpp
mini_compiler/src/parser/: parser.cpp
mini_compiler/src/utils/: utils.h
nasm/first_nasm/: README.md  first.asm
(+18 files in other folders)
